# ARCADE

./: README.md
01_ApolloX_v2/: README.md  env.yaml  generate_vasp.py  requirements.txt
01_ApolloX_v2/apollox2/: version.py
01_ApolloX_v2/apollox2/.ipynb_checkpoints/: __init__-checkpoint.py  main-checkpoint.py
01_ApolloX_v2/apollox2/comm/: __init__.py
01_ApolloX_v2/apollox2/cpp/: CMakeLists.txt  __init__.py  accelerate.h  bind.cpp  lattice.cpp  mc.cu
01_ApolloX_v2/apollox2/cpp/.ipynb_checkpoints/: accelerate-checkpoint.cpp  accelerate-checkpoint.cu  bind-checkpoint.cpp  lattice-checkpoint.h
01_ApolloX_v2/apollox2/io/: .test_input.py.swp  __init__.py  input.py  params.py
01_ApolloX_v2/apollox2/model/: opt.py
01_ApolloX_v2/apollox2/utils/: __init__.py
01_ApolloX_v2/example/: POSCAR  config.yaml  evolution_data.txt  output.vasp  sro  top_results.csv
01_ApolloX_v2/example/.ipynb_checkpoints/: config-checkpoint.yaml
01_ApolloX_v2/example/best_structures/: 1.vasp  10.vasp  100.vasp  11.vasp  12.vasp  13.vasp  14.vasp  15.vasp  16.vasp  17.vasp  18.vasp  19.vasp  2.vasp  20.vasp  21.vasp  22.vasp  23.vasp  24.vasp  25.vasp  26.vasp  27.vasp  28.vasp  29.vasp  (+77 more)
02_adsorption site processing/: README.md  adsorption_structure_COOH.py  adsorption_structure_H.py  adsorption_structure_OCHO.py  compute_local_density_deviation.py  compute_warren_cowley.py  match_by_joint_descriptor.py
03_contribution_score_evaluation/: sro_activity.py  sro_selectivity.py  sro_stability.py
data/activity_analysis/: LaSnBi.csv  LaSnBiCoNi.csv  pure_element.csv  volcano_raw_line.csv
(+3095 files in other folders)
